--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,21 @@ header
 
 nav
 {
-    padding: 20px 20px;
+    display: flex;
+    justify-content: center;
+    padding: 20px 4rem;
+}
+
+.nav-item
+{
+    padding: 0.5rem 1rem;
+    font-weight: 600;
+    border-bottom: 2px transparent solid;
+}
+
+.nav-item:hover
+{
+    border-bottom: 2px white solid;
 }
 
 #logo
