--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
-.main-box
+.titlebar
 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100vw;
+    height: 40vh;
+    object-fit: cover;
+    object-position: 0 30%;
 }
 
 .box
@@ -10,6 +11,8 @@
     border: 2px solid #fff;
     padding: 20px 20px;
     margin-bottom: 10px;
+    width: 16rem;
+    text-align: center;
 }
 
 .box:hover
@@ -17,10 +20,28 @@
     background-color: #333;
 }
 
-.titlebar
+.section
 {
-    width: 100vw;
-    height: 40vh;
-    object-fit: cover;
-    object-position: 0 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row
+{
+    width: 1200px;
+    display: flex;
+    padding: 4% 0;
+}
+
+.column
+{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.auto-column
+{
+    width: 50%;
 }
