--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,7 @@
 body
 {
     background-color: #222;
-}
-
-h1
-{
+    font-family: sans-serif;
     color: #fff;
 }
 
@@ -14,7 +11,3 @@ a
     text-decoration: none;
 }
 
-.default-section
-{
-    width: 1200px;
-}
